--- a/_posts/2019-07-03-the-us-narrative-today.html
+++ b/_posts/2019-07-03-the-us-narrative-today.html
@@ -2539,107 +2539,107 @@ stories:
   domain: http://www.lmtribune.com/
   link: https://lmtribune.com/news_ap/idaho/nevada-guard-buries-soldier-killed-in-tank-rollover-accident/article_fd0a8724-b238-5fec-b044-48c5548bcc73.html
 images:
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-light-dali.jpg
-- name: curtain-curtain-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-pablo-blue.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-gred-mash.jpg
-- name: eduardo-eduardo-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-dali-three.jpg
-- name: nazi-invasion-P6210065.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-P6210065.jpg
-- name: meadowbutterfly-meadow-butterfly-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-dali-three.jpg
-- name: supreme-court-supremecourt-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-attack-planes.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-yellow-collage.jpg
-- name: docks-docks-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-bright-sand.jpg
-- name: gypsy-wagon-gypsywagon-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-ww2-dresden.jpg
-- name: adam-smith-adam-smith-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-dry-skin.jpg
-- name: fence-mexico-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-far-away.jpg
-- name: mistywoods-babyfoot-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-sunday.jpg
-- name: bluelake-neo-instinct-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-neo-instinct-file-00-00-38-67.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-yellow-paper.jpg
-- name: legal-statue-legalstatue-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-cinnamon-rolls.jpg
-- name: amusement-park-amusement-park-2-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-kandinsky-bv.jpg
-- name: blossombar-spagetti-accident-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-spagetti-accident-file-00-00-00-00.jpg
-- name: beach-rocks-beach-rocks-currents-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-purple-storm.jpg
-- name: berlinwall2-berlinwall-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-smoking-cigarette.jpg
-- name: amusement-park-amusement-park-2-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-colorful-blocks.jpg
-- name: old-granary-field-granaryfield-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-purp-paper.jpg
-- name: castle-wall-DSC-0067-colorful-dream.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-colorful-dream.JPG
-- name: oldhouse-granaryfield-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-gan-vogh.jpg
-- name: curtain-curtain-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-blue-circuit.jpg
-- name: christianity-christianity-under-construction-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-pablo-blue.jpg
-- name: oldhouse-granaryfield-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-blue-circuit.jpg
-- name: legal-statue-legalstatue-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-smoking-cigarette.jpg
-- name: razorwire-DSC-0080-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-mucha-mult.jpg
-- name: oldcabin-store-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-dark-dali.jpg
-- name: mosaic-face-mosaic-face-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-emily-carr.jpg
-- name: cyber-api-description-wars-cannon-wall-satan.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-cannon-wall-satan.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-free-woman.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-free-woman.JPG
-- name: crow_emily_carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_emily_carr.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-plentiful.jpg
+- name: old-cabin-oldcabin-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-umberto-bocc.jpg
+- name: statue-of-liberty-front-view-statueofliberty-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-alberto-giacometti.jpg
+- name: miamibeach-miamibeach-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-umberto-bocc.jpg
+- name: abandonedbuildings_pablo_blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_pablo_blue.jpg
+- name: powerlines-power-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-marcel-duchamp.jpg
+- name: old-barn-old-barn-1500-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-crabapple.jpg
+- name: machine-road-machine-road-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-colorful-blocks.jpg
+- name: store-on-corner-store-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-cinnamon-rolls.jpg
+- name: san-francisco-street-view-san-francisco-street-view-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-dark-soul.jpg
+- name: status-berlin-status-berlin-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-blue-circuit-5.jpg
+- name: white-house-lawn-white-house-lawn-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-umberto-bocc.jpg
+- name: oldhouse-granaryfield-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-dark-soul.jpg
+- name: stories-green-gears-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-green-gears-matrix.jpg
+- name: wreck-IMG_6965.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wreck-IMG_6965.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-jap-dys-1.jpg
+- name: aws-s3-square-77-33-800-500-0-max-0--5--1-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-77-33-800-500-0-max-0--5--1-square.jpg
+- name: store-on-corner-store-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-purple-pond.jpg
+- name: downtheline-downtheline-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-nazi-poster.jpg
+- name: gypsy-wagon-gypsywagon-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-blue-brush.jpg
+- name: bordercrossing-bordercrossing-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-dark-soul.jpg
+- name: razorwire-DSC-0080-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-dark-dali.jpg
+- name: desert-dragon-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/desert-dragon-diego-rivera1.jpg
+- name: paris-paris-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-blue-brush.jpg
+- name: aws-s3-stories-cargo-ship-zoomed-in-on-sea-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-zoomed-in-on-sea-light-dali.jpg
+- name: oldcabin-oldcabin-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-crabapple.jpg
+- name: scream-IMG_1937.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_1937.jpg
+- name: locked-up-steam-lock-up-steam-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-circuit-3.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-sand-paper.jpg
+- name: walled-garden-walled-garden-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-spagetti-accident.jpg
+- name: oldsmallboat-oldsmallboat-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-cinnamon-rolls.jpg
+- name: copper-circuit-IMG_7936.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7936.jpg
 - name: oldbarn-oldbarn-internet-numbers.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-internet-numbers.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-colored-circuits.jpg
-- name: castle-wall-DSC-0067-ww2-color.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-ww2-color.JPG
-- name: bluelake-blue-brush-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-brush-file-00-01-17-38.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-yellow-collage.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-yellow-collage.JPG
-- name: razorwire-DSC-0080-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-light-dali.jpg
-- name: old-door-lock-old-door-lock-2-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-wols.jpg
-- name: death-valley-death-valley-national-park-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-smooth-ride.jpg
-- name: old-house-oldhouse-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-deep-connections.jpg
-- name: windowmountain-window-mountain-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-sand-paper.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-bright-sand.jpg
-- name: sand-hand-sand-hand-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-deep-connections.jpg
-- name: server-racks-clouds-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-clouds-spagetti-accident.jpg
-- name: old-granary-field-oldhouse-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-kandinsky-bv.jpg
-- name: subway-subway-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-dali-three.jpg
-- name: castle-wall-DSC-0067-bright-sand.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-bright-sand.JPG
+- name: gypsy-wagon-gypsywagon-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-yellow-paper.jpg
+- name: powerlines-power-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-bright-sand.jpg
+- name: oldsmallboat-oldsmallboat-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-dark-rain.jpg
+- name: oldhousecars-house-old-cars-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-kand-two.jpg
+- name: art-museum-art-museum-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-diego-rivera1.jpg
+- name: school-clouds-church-clouds-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-really-hot.jpg
+- name: crow-crow-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-blue-brush.jpg
+- name: white-house-lawn-white-house-window-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-deep-connections.jpg
+- name: old-barn-old-barn-1500-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-blue-electricity.jpg
+- name: dc-statue-dcstatue-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-kandinsky-bv.jpg
+- name: aws-s3-stories-losangeles-from-observatory-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-losangeles-from-observatory-blue-circuit.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-blue-granite.jpg
+- name: gypsy-wagon-gypsywagon-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-blue-circuit.jpg
+- name: white-house-lawn-white-house-window-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-bright-sand.jpg
+- name: carry-load-carryload-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-umberto-bocc.jpg
+- name: lincoln-memorial-lincolnmemorial-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-creativity.jpg
+- name: crow-crow-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-blue-granite.jpg
+- name: legal-statue-legalstatue-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-mucha-mult.jpg
+- name: rockingchair-rockingchair-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-neo-instinct.jpg
 ---
 Deerhunter Disappear, Reappear In Phoenix At Valley Bar.&nbsp;Priyanka Chopra Planned Wedding In Less Than Two Months.&nbsp;Rail Riders Offer Rondowa Pedal Trip.&nbsp;My First Prairie Patch Planting.&nbsp;How Much Rain Is Too Much?.&nbsp;Celebrating Independence Day Made Easier.&nbsp;Oregon Democrats Have Supermajority, But Learned Its Limits.&nbsp;Seattle Book Release With Gordon Walker.&nbsp;
